src/interp/snapshots/rsh__interp__token__tests__tokenizer_for_loop.snap
---
source: src/interp/token.rs
expression: tokens
---
[
    Tk {
        tk_type: SOI,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: For,
        wd: WordDesc {
            text: "for",
            span: Span {
                start: 0,
                end: 3,
            },
            flags: WdFlags(
                KEYWORD,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "i",
            span: Span {
                start: 4,
                end: 5,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: In,
        wd: WordDesc {
            text: "in",
            span: Span {
                start: 6,
                end: 8,
            },
            flags: WdFlags(
                KEYWORD,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "1",
            span: Span {
                start: 9,
                end: 10,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "2",
            span: Span {
                start: 11,
                end: 12,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "3",
            span: Span {
                start: 13,
                end: 14,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Cmdsep,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Do,
        wd: WordDesc {
            text: "do",
            span: Span {
                start: 15,
                end: 17,
            },
            flags: WdFlags(
                KEYWORD,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "echo",
            span: Span {
                start: 18,
                end: 22,
            },
            flags: WdFlags(
                BUILTIN,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "$i",
            span: Span {
                start: 23,
                end: 25,
            },
            flags: WdFlags(
                IS_ARG,
            ),
        },
    },
    Tk {
        tk_type: Cmdsep,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Done,
        wd: WordDesc {
            text: "done",
            span: Span {
                start: 26,
                end: 30,
            },
            flags: WdFlags(
                KEYWORD,
            ),
        },
    },
]
