src/interp/snapshots/rsh__interp__token__tests__tokenizer_multiple_args.snap
---
source: src/interp/token.rs
expression: tokens
---
[
    Tk {
        tk_type: SOI,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "ls",
            span: Span {
                start: 0,
                end: 2,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: String,
        wd: WordDesc {
            text: "-l",
            span: Span {
                start: 3,
                end: 5,
            },
            flags: WdFlags(
                IS_ARG,
            ),
        },
    },
    Tk {
        tk_type: String,
        wd: WordDesc {
            text: "/home/user",
            span: Span {
                start: 6,
                end: 16,
            },
            flags: WdFlags(
                IS_ARG,
            ),
        },
    },
]
