src/interp/snapshots/rsh__interp__token__tests__tokenizer_pipeline.snap
---
source: src/interp/token.rs
expression: tokens
---
[
    Tk {
        tk_type: SOI,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "ls",
            span: Span {
                start: 0,
                end: 2,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Pipe,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                IS_OP,
            ),
        },
    },
    Tk {
        tk_type: String,
        wd: WordDesc {
            text: "grep",
            span: Span {
                start: 3,
                end: 4,
            },
            flags: WdFlags(
                IS_ARG,
            ),
        },
    },
    Tk {
        tk_type: String,
        wd: WordDesc {
            text: "file",
            span: Span {
                start: 5,
                end: 9,
            },
            flags: WdFlags(
                IS_ARG,
            ),
        },
    },
]
