src/interp/snapshots/rsh__interp__token__tests__tokenizer_simple.snap
---
source: src/interp/token.rs
expression: tokens
---
[
    Tk {
        tk_type: SOI,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Ident,
        wd: WordDesc {
            text: "echo",
            span: Span {
                start: 0,
                end: 4,
            },
            flags: WdFlags(
                BUILTIN,
            ),
        },
    },
    Tk {
        tk_type: String,
        wd: WordDesc {
            text: "hello",
            span: Span {
                start: 5,
                end: 10,
            },
            flags: WdFlags(
                IS_ARG,
            ),
        },
    },
]
