src/interp/snapshots/rsh__interp__token__tests__tokenizer_subshell_multiline.snap
---
source: src/interp/token.rs
expression: tokens
---
[
    Tk {
        tk_type: SOI,
        wd: WordDesc {
            text: "",
            span: Span {
                start: 0,
                end: 0,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
    Tk {
        tk_type: Subshell,
        wd: WordDesc {
            text: "#!python\nprint(\"hello world\")\n",
            span: Span {
                start: 0,
                end: 9,
            },
            flags: WdFlags(
                0x0,
            ),
        },
    },
]
